Changes to project search style to fix rendering problem

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
         
         <div class="col-md-3">
           <div class="selector">
-          	<h2>Select your project</h2>
-          	<div id="projecthelp"><img src="imgs/help_icon14.png" height="14" width="14"/></div>
+          		<div class="projectheadline">
+          			<h2>Select your project</h2>
+          			<img id="projecthelp" src="imgs/help_icon14.png" height="14" width="14"/>
+          		</div>
           	<div class="projectselection">
               <p class="text-center">
 	              <div id='pcombobox'></div>
