--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         </div>
       </div>
 
+	  <div class="row middle" style="background-color:red;text-align:center">
+			<h3>GiLA is currently unavailabe, we will back soon!</h3>
+		</div>
 
       <div class="row middle">
         <div class="col-md-9">
