--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 
 	  <div class="row middle" style="background-color:red;text-align:center">
-			<h3>GiLA is currently unavailabe, we will back soon!</h3>
+			<h3>GiLA is currently unavailable, we will back soon!</h3>
 		</div>
 
       <div class="row middle">
