Added error message

--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
         </div>
       </div>
 
-	  <div class="row middle" style="background-color:red;text-align:center">
-			<h3>GiLA is currently unavailable, we will back soon!</h3>
-		</div>
+	  <div id="error" class="row middle">
+	  </div>
 
       <div class="row middle">
         <div class="col-md-9">
