Removed 'currently unavailable' message

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
 
-	  <div id="error" class="row middle">
+	  <div id="error" class="row middle" style="visibility:hidden">
 	  </div>
 
       <div class="row middle">
