--- a/project.html
+++ b/project.html
@@ -40,6 +40,10 @@
           <div class="text-center" id="projectName"></div>
         </div>
       <div>
+      <div class="row">
+      	<div id="projectsummary" class="col-md-12">
+      	</div>
+      </div>
 
      <div class="row">
         <div class="col-md-4 leftcol">
