Added legend to V1

--- a/project.html
+++ b/project.html
@@ -49,6 +49,20 @@
         <div class="col-md-4 leftcol">
           <h2>Label Usage</h2>
           <p>Each label is represented as a node in the graph. The bigger the node is the more frequent is the label (i.e. the more issues with that label in the project). Edges connect labels that share issues. The thicker the edge the more issues tagged with both labels there are.</p>
+          <div class="legend">
+          	<div class="legenditem">
+          		<img src="imgs/circle-16.png" height="16" width="16"/>	
+          		<p>Label</p>
+          	</div>
+          	<div class="legenditem">
+          		<img src="imgs/line-16.png" height="16" width="16"/>	
+          		<p>Labels assigned together</p>
+          	</div>
+          	<div class="legenditem">
+          		<img src="imgs/line-width-16.png" height="16" width="16"/>	
+          		<p>Number of occurrences of that pair</p>
+          	</div>
+          </div>
         </div>
         <div class="col-md-8 rightcol">
           <div class="rq1"></div>
