Small change to V1 legend

--- a/project.html
+++ b/project.html
@@ -60,7 +60,7 @@
           	</div>
           	<div class="legenditem">
           		<img src="imgs/line-width-16.png" height="16" width="16"/>	
-          		<p>Number of occurrences of that pair</p>
+          		<p>Number of occurrences of a pair of labels</p>
           	</div>
           </div>
         </div>
