Added link to the survey

--- a/project.html
+++ b/project.html
@@ -36,7 +36,7 @@
     <div id="affixBox">
       <div class="surveyBox">
         <p class="text-center">We would like to hear your opinion</p>
-        <p class="text-center"><b><a href="#">Take our survey!</a></b></p>
+        <p class="text-center"><b><a href="https://docs.google.com/forms/d/1CQPQhPAkiqQSlAk2wUkQ6zZveDUHgHee6gSR7okImKk/viewform?usp=send_form" target="_blank">Take our survey!</a></b></p>
       </div>
     </div>
     <div class="container">
