Fixed typo in contact.html

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                 <img style="float: left; margin-right: 0px; margin-top: 0px; margin-right: 10px; padding-top: 0px; padding-left: 0px; width: 18px;" src="imgs/gh-icon.png"/>
                 Visit on GitHub
               </button>
-              <button class="btn" onclick="location.href='contact.html'">Who we are</button>
+              <button class="btn" onclick="location.href='contact.html'">About us</button>
             </p>
           </div>
         </div>
