Changing the survey box and the ghtorrent dataset snapshot

--- a/project.html
+++ b/project.html
@@ -50,6 +50,11 @@
       	<div id="projectsummary" class="col-md-12">
       	</div>
       </div>
+      <div class="row">
+        <div class="surveyBox" class="col-md-12">
+        <p class="text-center">We need you!<b> <a href="https://docs.google.com/forms/d/1CQPQhPAkiqQSlAk2wUkQ6zZveDUHgHee6gSR7okImKk/viewform?usp=send_form" target="_blank">Take our survey!</a></b></p>
+        </div>
+      </div>
 
      <div class="row">
         <div class="col-md-4 leftcol">
@@ -138,12 +143,6 @@
         <div class="col-md-8 rightcol">
           <div id="resolutiontl" class="rq3"></div>
           <small id="info_rq3" style="visibility:hidden">(Pass your mouse over the ticks to see the time)</small>
-        </div>
-      </div>
-      <div class="row">
-        <div class="surveyBox" class="col-md-12">
-        <p class="text-center">We would like to hear your opinion</p>
-        <p class="text-center"><b><a href="https://docs.google.com/forms/d/1CQPQhPAkiqQSlAk2wUkQ6zZveDUHgHee6gSR7okImKk/viewform?usp=send_form" target="_blank">Take our survey!</a></b></p>
         </div>
       </div>
     </div>
