Added the controller for https

--- a/project.html
+++ b/project.html
@@ -40,16 +40,22 @@
       </div>
     </div>-->
     <div class="container">
+      <div id="error" class="row middle" style="visibility:hidden">
+      </div>
+      
       <div class="row">
         <div class="col-md-12 project">
           <div id="homeicon"><a href="http://atlanmod.github.io/gila/"><img src="imgs/icon90x82.png" width="90" height="82"/></a></div>
           <div class="text-center" id="projectName"></div>
         </div>
       <div>
+
+
       <div class="row">
       	<div id="projectsummary" class="col-md-12">
       	</div>
       </div>
+
       <div class="row">
         <div class="surveyBox" class="col-md-12">
         <p class="text-center">We need you!<b> <a href="https://docs.google.com/forms/d/1CQPQhPAkiqQSlAk2wUkQ6zZveDUHgHee6gSR7okImKk/viewform?usp=send_form" target="_blank">Take our survey!</a></b></p>
