Added survey box in landing page

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
        	</div>
       </div>
 
+      <div class="row">
+        <div class="landingSurveyBox col-md-offset-3 col-md-6">
+        <p class="text-center">Help us understand how you use issue labels in your project. <br>Take our <a href="https://docs.google.com/forms/d/1CQPQhPAkiqQSlAk2wUkQ6zZveDUHgHee6gSR7okImKk/viewform?usp=send_form" target="_blank">10-min survey!</a></p>
+        </div>
+      </div>
+
       <div class="row bottom">
         <div class="col-md-4">
           <div class="rqbox">	
