Minor change in project.html

--- a/project.html
+++ b/project.html
@@ -145,7 +145,7 @@
               <div id="rq3noselection" class="noselmsg" style="display:none">No label selected</div>
               <div class="outlierdiv">
               	<input id="outlierscheck" type="checkbox" value="value">
-              	<p>Remove outliers</p>
+              	<p>remove outliers</p>
               </div>
             </div>
           </div>
