Adding warning message for network maintenance, again

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
               </button>
               <button class="btn" onclick="location.href='contact.html'">About us</button>
             </p>
+            <div style="margin-top:0px; margin-bottom: 15px; font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
+              <div class="label label-danger">Due to network maintenance, the service may be unavailable on December 22nd</div>
+            </div>
           </div>
           </div>
         </div>
-      </div>
-
 	  <div id="error" class="row middle" style="visibility:hidden">
 	  </div>
 
@@ -123,5 +124,7 @@
         </div>
       </footer>
     </div>
+      </div>
+
   </body>
 </html>
