Removing warning message

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
               </button>
               <button class="btn" onclick="location.href='contact.html'">About us</button>
             </p> 
-            <div style="margin-top:0px; margin-bottom: 15px; font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
+            <!--<div style="margin-top:0px; margin-bottom: 15px; font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
               <div class="label label-danger">Due to database maintenance, the service may be unavailable in March 2015</div>
-            </div>
+            </div>-->
           </div>
           </div>
         </div>
